// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex can specify both \`sx\` and custom spacing 1`] = `
.pounce-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.pounce-0 input {
  max-width: 5px;
}

.pounce-0>*:not(:last-child) {
  margin-right: 4px;
}

<div>
  <div
    class="pounce-0"
  />
</div>
`;

exports[`Flex renders 1`] = `
.pounce-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    class="pounce-0"
  />
</div>
`;

exports[`Flex works along with Box 1`] = `
.pounce-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.pounce-0 {
  width: 200px;
  padding-top: 9px;
  padding-bottom: 9px;
  background-color: blue-400;
}

.pounce-1 {
  width: 300px;
  padding-top: 32px;
  padding-bottom: 32px;
  background-color: red-300;
}

<div>
  <div
    class="pounce-2"
  >
    <div
      class="pounce-0"
    >
      Test
    </div>
    <div
      class="pounce-1"
    >
      Test
    </div>
  </div>
</div>
`;
